syntax = "proto3";

option csharp_namespace = "ArticleAPI";

import "google/protobuf/timestamp.proto";

package articles;

// The greeting service definition.
service Articles {
  // Sends a greeting
  rpc CreateArticle (CreateRequest) returns (CreateResponse);
  rpc GetArticles (GetArticlesRequest) returns (GetArticlesResponse);
}

message CreateResponse {
}

message CreateRequest {
  string description = 2;
  string title = 1;
}

// Определение запроса (может быть пустым или с параметрами)
message GetArticlesRequest {
}


// Определение статьи
message ArticleDtoObject {
  string title = 1;
  string description = 2;
  google.protobuf.Timestamp created_at = 3;
}

// Определение ответа, который будет содержать массив статей
message GetArticlesResponse {
  repeated ArticleDtoObject articles = 1;
}